--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".setting_activity"
+        <activity android:name=".SettingActivity"
             android:theme="@style/AppTheme.CustomTheme">
         </activity>
+        <activity android:name=".LevelsActivity"></activity>
         <activity android:name=".Start_Screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
