--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
             android:theme="@style/AppTheme.CustomTheme">
         </activity>
         <activity android:name=".LevelsActivity"></activity>
-        <activity android:name=".Start_Screen">
+        <activity android:name=".StartScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".GameActivity" />
     </application>
 
 </manifest>
