--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SettingActivity"
-            android:theme="@style/AppTheme.CustomTheme">
-        </activity>
-        <activity android:name=".LevelsActivity"
-            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".score_board"></activity>
+        <activity
+            android:name=".SettingActivity"
+            android:theme="@style/AppTheme.CustomTheme"></activity>
+        <activity
+            android:name=".LevelsActivity"
+            android:theme="@style/AppTheme" />
         <activity android:name=".StartScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
