--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.nex3z:toggle-button-group:1.1.8'
     implementation 'com.github.codeestX:ENViews:v1.0.3'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.GrenderG:Toasty:1.4.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
