--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".EndOfArcadeGame">
+        <activity android:name=".EndOfArcadeGameActivity">
 
         </activity>
         <activity android:name=".ScoreBoardActivity" />
