--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.codeestX:ENViews:v1.0.3'
+    implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
 }
