countdown and few little twiches

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".TutorialActivity"></activity>
         <activity android:name=".ScoreBoardActivity" />
         <activity
             android:name=".LevelsActivity"
