--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.codeestX:ENViews:v1.0.3'
     implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
+    implementation 'com.github.jinatonic.confetti:confetti:1.1.1'
+
+
 }
