--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.github.codeestX:ENViews:v1.0.3'
     implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
     implementation 'com.github.jinatonic.confetti:confetti:1.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
 
 
 }
