--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.github.jinatonic.confetti:confetti:1.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'me.toptas.fancyshowcase:fancyshowcaseview:1.1.4'
+    implementation 'com.google.android.gms:play-services-ads:17.1.1'
 
 
 }
