--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,9 @@ repositories {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.airbnb.android:lottie:2.5.0-rc1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
@@ -43,6 +44,4 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'me.toptas.fancyshowcase:fancyshowcaseview:1.1.4'
     implementation 'com.google.android.gms:play-services-ads:17.1.1'
-
-
 }
