--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     implementation 'me.toptas.fancyshowcase:fancyshowcaseview:1.1.4'
-    implementation 'com.google.android.gms:play-services-ads:17.1.1'
+    implementation 'com.google.android.gms:play-services-ads:17.1.3'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-storage:16.1.0'
+    implementation 'com.google.firebase:firebase-database:16.0.6'
 }
+
+apply plugin: 'com.google.gms.google-services'
